--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -4,6 +4,12 @@
   --primary-bg-color: #151c25;
   --primary-shadow-success: #29e367;
   --primary-shadow-error: #e32929;
+  --primary-color--button: linear-gradient(
+    144deg,
+    #af40ff,
+    #5b42f3 50%,
+    #00ddeb
+  );
 }
 
 * {
@@ -16,12 +22,38 @@ body {
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(43, 63, 168);
-  background: radial-gradient(
-    circle,
-    rgba(1, 9, 101, 1) 0%,
-    rgba(109, 42, 66, 1) 100%
-  );
+  background: rgb(24 25 30);
+  background-attachment: fixed;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23000000' fill-opacity='0.14'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-blend-mode: hard-light;
+}
+
+img,
+picture,
+svg,
+video {
+  display: block;
+  max-width: 100%;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #899597;
 }
 
 @tailwind base;
