--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -10,6 +10,7 @@
     #5b42f3 50%,
     #00ddeb
   );
+  --gold-nft--color: #ffd700;
 }
 
 * {
@@ -54,6 +55,30 @@ video {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #899597;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+
+  -webkit-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  animation-duration: 2s;
+  animation-delay: 100ms
 }
 
 @tailwind base;
