--- a/src/frontend/components/nft-card/NftCard.css
+++ b/src/frontend/components/nft-card/NftCard.css
@@ -64,9 +64,9 @@
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  gap: 30px;
+  gap: 1rem;
 }
 
 .title {
