--- a/src/frontend/components/nft-card/NftCard.css
+++ b/src/frontend/components/nft-card/NftCard.css
@@ -18,8 +18,11 @@
   border-radius: 5px;
 }
 
-.back {
+.back,
+.front {
   background-color: #151515;
+  position: absolute;
+  width: 100%;
   height: 100%;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -32,7 +35,8 @@
   overflow: hidden;
 }
 
-.back.minted::before {
+.back.minted::before,
+.front.minted::before {
   content: " ";
   display: block;
   width: 160px;
@@ -49,7 +53,8 @@
   animation: rotation_481 5000ms infinite linear;
 }
 
-.back.listed::before {
+.back.listed::before,
+.front.listed::before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -74,6 +79,60 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+.front {
+  transform: rotateY(180deg);
+  color: white;
+}
+
+.front-content {
+  position: absolute;
+  background-color: #151515;
+  color: white;
+  width: 99%;
+  height: 99%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.badge {
+  padding: 2px 10px;
+  border-radius: 10px;
+  width: fit-content;
+}
+
+.description {
+  box-shadow: 0px 0px 10px 5px #00000088;
+  width: 100%;
+  padding: 10px;
+  background-color: #00000099;
+  backdrop-filter: blur(5px);
+  border-radius: 5px;
+}
+
+.title {
+  font-size: 11px;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title p {
+  width: 50%;
+}
+
+.card-footer {
+  color: #ffffff88;
+  margin-top: 5px;
+  font-size: 8px;
+}
+
+.card:hover .content {
+  transform: rotateY(180deg);
+}
+
 
 @keyframes rotation_481 {
   0% {
