--- a/src/frontend/components/notification/Notification.css
+++ b/src/frontend/components/notification/Notification.css
@@ -17,6 +17,7 @@
   max-width: 211px;
   width: 211px;
   animation: slideRight 300ms linear;
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   overflow: hidden;
   text-overflow: ellipsis;
   border-image: var(--primary-color--border);
